Fix nav items height on small screens

--- a/src/Layout/Header/header.scss
+++ b/src/Layout/Header/header.scss
@@ -36,14 +36,16 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            font-size: 12px;
             width: 95px;
+            margin: 0 10px;
+            font-size: 12px;
             text-decoration: none;
             text-transform: uppercase;
             cursor: pointer;
 
             @media screen and (max-width: $breakMd) {
-                margin: 20px auto;
+                margin: 0 auto;
+                padding: 20px 0;
             }
 
             &.active {
